--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset = "utf-8">
-		<title>My First Bitstarter</title>
+		<title>Real RPG Platform</title>
 		<meta name="viewport" content ='width=device-width, initial-scale=1.0'>
 		<link type="text/css" rel="stylesheet"
 				href = "vendor/bootstrap/css/bootstrap.css">
@@ -85,7 +85,7 @@
 				text-align:  justify;
 			}
 			.asset {
-				padding: 2.5% , 0%;
+				padding: 2.5% 0%;
 			}
 			.footer {
 				color: #cccccc;
@@ -114,7 +114,7 @@
 						<span class='icon-bar'></span>
 						<span class='icon-bar'></span> 
 					</button>
-					<a class ='brand' href="#"> BitStarter</a>
+					<a class ='brand' href="#"> RRPG </a>
 					<div class = "nav-collapse collapse">
 						<ul class = "nav">
 							<li class="active"> <a href="#">Home</a></li>
@@ -132,13 +132,13 @@
 		<div class="container">
 			<div class="row-fluid heading">
 				<div class="span12">
-					<h1>Product</h1>
+					<h1>RRPG</h1>
 				</div>
 			</div>
 
 			<div class="row-fluid subheading">
 				<div class="span12">
-					<p class="lead">One sentence description. </p>
+					<p class="lead">Real Role Playing Game Platform</p>
 				</div>
 			</div>
 
@@ -195,13 +195,13 @@
 				</div>
 
 				<div class="span5 copy"> 
-					<p>sdfasdfasg dsakfj; klasdjf;l lskdj asjkdfh kskadjfh skdfh </p>
+					<p>RRPG is a platform that provide user to create social interactive game. This revolusionary game perception used smart phone and NFC to create new gaming exprience in REAL physical world. User can create simple game such as Tresure Hunt to complex RPG game such as Final Fantasy and interact in the real world.</p>
 				</div>
 			</div>
 
 			<div class= "row-fluid section2">
 				<div class= "span5 offset1 copy copy-right">
-					<p>sdafs adf hfd fsdadf da gfsda f </p>
+					<p>Spending too much time on internet social network? Too little physical social interaction? Too Immerse in Computer Games? These issue become more and more common among our community. </p>
 				</div>
 				<div class='span5 asset'>
 					<img class="img-polariod" src="http://placehold.it/480x300">
@@ -217,12 +217,12 @@
 							<div class= "accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse"
 										data-parent= "#accordion2" href="#collapseOne">
-									What FAQ is used?
+									What is RRPG ?
 								</a>
 							</div>
 							<div id= "collapseOne" class= "accordion-body collapse">
 								<div class= "accordion-inner">
-									Frequent Ask Question
+									RRPG is a platform that provide user to create a game that can interact in the real physical world
 								</div>
 							</div>
 						</div>
@@ -231,15 +231,44 @@
 							<div class= "accordion-heading">
 								<a class="accordion-toggle" data-toggle="collapse"
 										data-parent= "#accordion2" href="#collapseTwo">
-									What FAQ is used?
+									How does the RRPG provide the REAL physical gaming exprience? 
 								</a>
 							</div>
 							<div id= "collapseTwo" class= "accordion-body collapse">
 								<div class= "accordion-inner">
-									Frequent Ask Question
+									Using the apps in smart phone as the player status and command device, we can connect the player status and command to the game server and interact with other players. Using NFC we connected the player and physical enviroment to the game system
 								</div>
 							</div>
 						</div>
+
+						<div class ="accordion-group">
+							<div class= "accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+										data-parent= "#accordion2" href="#collapseThree">
+									It sounds similar to the Google Ingress 
+								</a>
+							</div>
+							<div id= "collapseThree" class= "accordion-body collapse">
+								<div class= "accordion-inner">
+									Ingress itself is a game where as RRPG is a platform that allow user to create their own version of game. RRPG is using NFC card as the brige of the game and the physical enviroment where Ingress is using camera to overlay the game to the physical world.
+								</div>
+							</div>
+						</div>
+
+						<div class ="accordion-group">
+							<div class= "accordion-heading">
+								<a class="accordion-toggle" data-toggle="collapse"
+										data-parent= "#accordion2" href="#collapseFour">
+									What is so interesting about RRPG? 
+								</a>
+							</div>
+							<div id= "collapseFour" class= "accordion-body collapse">
+								<div class= "accordion-inner">
+									RRPG based game provide more physical interaction between players. And the creative on the game is unlimited. It can used to create family game event or larger community game event.
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
