--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset = "utf-8">
-		<title>My First Bitstarter</title>
+		<title>Real RPG Platform</title>
 		<meta name="viewport" content ='width=device-width, initial-scale=1.0'>
 		<link type="text/css" rel="stylesheet"
 				href = "vendor/bootstrap/css/bootstrap.css">
@@ -114,7 +114,7 @@
 						<span class='icon-bar'></span>
 						<span class='icon-bar'></span> 
 					</button>
-					<a class ='brand' href="#"> BitStarter</a>
+					<a class ='brand' href="#"> RRPG </a>
 					<div class = "nav-collapse collapse">
 						<ul class = "nav">
 							<li class="active"> <a href="#">Home</a></li>
@@ -143,12 +143,9 @@
 			</div>
 
 			<div class="row-fluid pitch">
-				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
 
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
-				<div class="span5 actions">
+				<div class="span5 offset1 actions">
 					<div class="span8 offset2">
 						<div class="statistics">
 							<div class="span4">
@@ -186,6 +183,11 @@
 						<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 					</div>
 				</div>
+
+				<div class="span5  video">
+					<img class="img-polaroid" src="http://placehold.it/480x300">
+				</div>
+
 			</div>
 
 			<!-- marketing copy -->
@@ -250,7 +252,7 @@
 							</div>
 							<div id= "collapseThree" class= "accordion-body collapse">
 								<div class= "accordion-inner">
-									Ingress itself is a game where as RRPG is a platform that allow user to create their own version of game. RRPG is using NFC card as the brige og the game and the physical enviroment where Ingress is using camera to overlay the game to the physical world.
+									Ingress itself is a game where as RRPG is a platform that allow user to create their own version of game. RRPG is using NFC card as the brige of the game and the physical enviroment where Ingress is using camera to overlay the game to the physical world.
 								</div>
 							</div>
 						</div>
