--- a/client/index.html
+++ b/client/index.html
@@ -143,12 +143,9 @@
 			</div>
 
 			<div class="row-fluid pitch">
-				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
-				</div>
 
 				<!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
-				<div class="span5 actions">
+				<div class="span5 offset1 actions">
 					<div class="span8 offset2">
 						<div class="statistics">
 							<div class="span4">
@@ -186,6 +183,11 @@
 						<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 					</div>
 				</div>
+
+				<div class="span5  video">
+					<img class="img-polaroid" src="http://placehold.it/480x300">
+				</div>
+
 			</div>
 
 			<!-- marketing copy -->
